discussion/kv_engine/125164/125164_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Change MagmaRequest getKey & getKeyLen function names

These are getting confused with IORequest equivalents.

Change-Id: Ife94dd2425a8587321b78ecd7d5e6663a89daf31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 00:54:28.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 01:57:38.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27393/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27393/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1611/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1611/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1611/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10878/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3081/ : FAILURE

Failure of a CTest test [2020-04-08T01:34:51.465Z] 205/378 Test #165: ep-engine_ep_unit_tests.AllBackends/DurabilityBucketTest .................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3081/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2073/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3017/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3025/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 08:54:18.000000000
Message: 
Patch Set 3: Code-Review+2

(1 comment)
Line:44, engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h -> nit: preferred getRawKeyLen and getRawKey if you have to make any change that requires a re-upload.

----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 14:46:27.000000000
Message: 
Patch Set 3:

(1 comment)
Line:44, engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h -> Done

----------------------------------------------------------------------------------------------------------------------
